--- a/CS/CustomActionControl.Module/CustomActionControl.Module.csproj
+++ b/CS/CustomActionControl.Module/CustomActionControl.Module.csproj
@@ -11,8 +11,10 @@
     <RootNamespace>CustomActionControl.Module</RootNamespace>
     <AssemblyName>CustomActionControl.Module</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileUpgradeFlags></FileUpgradeFlags>
-    <UpgradeBackupLocation></UpgradeBackupLocation>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -102,7 +104,7 @@
     <Compile Include="Module.Designer.cs">
       <DependentUpon>Module.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order.cs" />
+    <Compile Include="BusinessObjects\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
