--- a/CS/CustomActionControl.Win/App.config
+++ b/CS/CustomActionControl.Win/App.config
@@ -14,7 +14,7 @@
   <connectionStrings>
     <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\v11.0;Initial Catalog=CustomActionControlEasyTest"/>
     <!-- Use the following connection string to connect to a database on the Microsoft SQL Server Express: -->
-    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\v11.0;Initial Catalog=CustomActionControla" />
+    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=CustomActionControl" />
     <!--
     Use the following connection string to connect to a database on the Microsoft SQL Server:
     <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(local);Initial Catalog=CustomActionControl"/>
